fix: remove align-items center from content__inner, restore profile layout

--- a/frontend/src/components/Main/Main.css
+++ b/frontend/src/components/Main/Main.css
@@ -11,7 +11,6 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
   max-width: 880px;
   margin: 0 auto;
@@ -21,6 +20,6 @@
 
 @media screen and (min-width: 320px) and (max-width: 544px) {
   .content__inner {
-    align-items: flex-start;
+    padding: 0 19px;
   }
 }
